# ringdown-injection-pipe

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
generate_data/: Compute_SNRs.py  MakeTestPipeline.py  injection_kws.json  input_file.json  save_data.py  save_data.sh  test_injection.ini
generate_tests/: MakeTestPipeline.py  generate_test.sh  input_file.json  ringdownfit.py  test_injection.ini
src/rdipipe/: __init__.py  analysis.py  compute_snrs.py  condorutils.py  configurations.py  fileutils.py  make_test_pipeline.py  priors.py  save_data.py
