
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    configargparse

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rdi_compute_snrs = rdipipe:compute_snrs
    rdi_make_test_pipeline=rdipipe:make_test_pipeline
    rdi_save_data=rdipipe:save_data


[flake8]
exclude = .git,docs,build,dist,test,*__init__.py,*_version.py, versioneer.py
max-line-length = 125
ignore = E129 W504 W503 E203 E266 F401 E402

[tool:pytest]
addopts = -p no:warnings
